// Copyright 2025 Redpanda Data, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";
import "google/api/field_behavior.proto";

package main;

message TestMessage {
  bytes some_bytes = 1;
}

message RequiredFieldTest {
  string required_field = 13 [(google.api.field_behavior) = REQUIRED];
}

message WktTestMessage {
  google.protobuf.Timestamp timestamp = 1;
  google.protobuf.Duration duration = 2;
  google.protobuf.Struct struct_field = 3;
  google.protobuf.Value value_field = 4;
  google.protobuf.ListValue list_value = 5;
  google.protobuf.FieldMask field_mask = 6;
  google.protobuf.Any any = 7;

  google.protobuf.StringValue string_value = 8;
  google.protobuf.Int32Value int32_value = 9;
  google.protobuf.Int64Value int64_value = 10;
  google.protobuf.BoolValue bool_value = 11;
  google.protobuf.BytesValue bytes_value = 12;
}
