// Copyright 2025 Redpanda Data, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package testservice.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/redpanda-data/protoc-gen-go-mcp/pkg/generator/testdata";

// TestService provides test operations
service TestService {
  // CreateItem creates a new item
  rpc CreateItem(CreateItemRequest) returns (CreateItemResponse);
  
  // GetItem retrieves an item by ID
  rpc GetItem(GetItemRequest) returns (GetItemResponse);
}

message CreateItemRequest {
  string name = 1;
  string description = 2;
  map<string, string> labels = 3;
  google.protobuf.Timestamp created_at = 4;
}

message CreateItemResponse {
  string id = 1;
  Item item = 2;
}

message GetItemRequest {
  string id = 1;
}

message GetItemResponse {
  Item item = 1;
}

message Item {
  string id = 1;
  string name = 2;
  string description = 3;
  map<string, string> labels = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}